2006-04-02  Thomas Schwinge  <tschwinge@gnu.org>

	* Makerules.in (%_user.c, %_server.c): Those are `.PRECIOUS'.
	(%.migs.d, %.migu.d): New targets.
	(%.migs_d, %.migu_d, %.migsh_d, %.miguh_d): Remove targets.
	Adopt the `include's to the renamed targets.
	* Makefile.in (clean): Adopt to the renamed targets.
	* i386/Makefile.in (clean): Likewise.

	* i386/Makefile.in (boothdr.o): New target.

2006-03-21  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.in (clean): Also remove `kernel.gz', `kernel.stripped' and
	`kernel.stripped.gz'.

	* Makefile.in (kernel.o): Handle `$(systype)-objfiles-prepend'.
	* i386/Makefile.in (sysdep.a): Likewise.
	* i386/Makerules.in (kernel-objfiles-prepend): Transform variable into
	`$(systype)-objfiles-prepend'.
	(kernel.o): Remove target.

2006-03-20  Thomas Schwinge  <tschwinge@gnu.org>

	* DEVELOPMENT: Document the NORMA removal.

2006-03-20  Leonardo Lopes Pereira  <leonardolopespereira@gmail.com>

	Remove unused and unsupported code.  Consult the file `DEVELOPMENT'
	for details.

	[patch #4982]
	* bogus/norma_device.h: Remove file.
	* bogus/norma_ether.h: Likewise.
	* bogus/norma_ipc.h: Likewise.
	* bogus/norma_task.h: Likewise.
	* bogus/norma_vm.h: Likewise.
	* include/mach/mach_norma.defs: Likewise.
	* include/mach/norma_task.defs: Likewise.
	* include/mach/norma_special_ports.h: Likewise.
	* Makefile.in (bogus-files): Remove `norma_device.h', `norma_ether.h',
	`norma_ipc.h', `norma_task.h' and `norma_vm.h'.
	(mach-headers): Remove `mach_norma.defs', `norma_task.defs' and
	`norma_special_ports.h'.
	* device/ds_routines.c: Don't include <norma_device.h> anymore and
	adopt all users of NORMA_DEVICE as if it were always defined to `0'.
	* device/net_io.c: Likewise for <norma_ether.h>, NORMA_ETHER.
	* kern/machine.c: Likewise.
	* ddb/db_command.c: Likevise for <norma_ipc.h>, NORMA_IPC.
	* ipc/ipc_init.c: Likewise.
	* ipc/ipc_kmsg.c: Likewise.
	* ipc/ipc_kmsg.h: Likewise.
	* ipc/ipc_mqueue.c: Likewise.
	* ipc/ipc_notify.c: Likewise.