@@ -1,3 +1,10 @@
+2006-04-08  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* i386/Makefile.in (INCLUDES): Don't add `$(srcdir)/bogus'.
+	* i386/Makerules.in (INCLUDES): Add
+	`$(abs_top_srcdir)/$(systype)/bogus'.
+	Reported by Samuel Thibault <samuel.thibault@ens-lyon.org>.
+
 2006-04-02  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makerules.in (%_user.c, %_server.c): Those are `.PRECIOUS'.
